# HytaleWorldExporter

./: .gitignore  CMakeLists.txt  README.md
src/: Export.cpp  Export.h  HytaleToOBJ.cpp  HytaleWorldExporter.cpp
src/data/: BlockModel.h  MeshData.h  Model.cpp  Model.h  Prefab.h  Vec.h  WorldData.h
src/geometry/: BlockIDMappings.cpp  BlockModel.h  BlockModelRegistry.cpp  GeometryGenerator.cpp  GeometryGenerator.h  MeshBuilder.cpp  MeshBuilder.h  ModelRegistry.cpp  PrefabMesher.cpp  PrefabMesher.h  TextureRegistry.cpp
src/output/: OBJExporter.cpp  OBJExporter.h
src/parse/: HytalePrefabParser.cpp  HytalePrefabParser.h  ModelParser.cpp  ModelParser.h
test/: Model_Test.prefab.json  Simple_Test.prefab.json
test/output/: complex.mtl  prefab.mtl  simple.mtl
